# BlueGauge

./: CMakeLists.txt  CMakePresets.json  README.md
docs/: settings-display-preview.html  tray-battery-ui-preview.html  win32-gdi-taskbar-options.html
res/: app.rc
src/: app.cpp  app.h  build_info.cpp  build_info.h  config.cpp  config.h  logger.cpp  logger.h  main.cpp  notify.cpp  notify.h  resource.h  single_instance.cpp  single_instance.h  startup.cpp  startup.h  tray.cpp  tray.h  version.h
src/bluetooth/: ble_battery.cpp  ble_battery.h  bluetooth_scanner.cpp  bluetooth_scanner.h  bluetooth_types.h  btc_battery.cpp  btc_battery.h  winrt_bluetooth_status.cpp  winrt_bluetooth_status.h
src/services/: bluetooth_device_watcher.cpp  bluetooth_device_watcher.h  scanner_service.cpp  scanner_service.h  update_service.cpp  update_service.h
